--- a/style.css
+++ b/style.css
@@ -23,7 +23,14 @@ footer
 	background-color: rgb(239,190,216);
 }
 
+.body .image img{
 
+    width: 210px;
+    height: 320px;
+    border-radius: 10%;
+    text-align: center;
+}
+	
 .main-nav {
     text-align: center;
 }
